objects/Opportunity_and_ROI__c.object
<CustomObject>
    <fields>
        <fullName>ROI_Sub_Categories__c</fullName>
        <description>Created for CR-20150623-9022.</description>
        <label>ROI Sub-Categories</label>
        <picklist>
            <picklistValues>
                <fullName>Brand Loyalty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grievances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCAHPS/CGCAHPS Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leader Rounding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Loyalty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Readmission Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Based Purchasing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Responsible_Person_s__c</fullName>
        <inlineHelpText>Indicate those member contacts associated with action required</inlineHelpText>
        <label>Responsible Person(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Persons__c</fullName>
        <inlineHelpText>Indicate those member contacts associated with action required</inlineHelpText>
        <label>Responsible Person(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Results_Period_Start__c</fullName>
        <description>*To be deleted in 30 Days*</description>
        <label>x: Results Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Results_Presented_to_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Results Presented to Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services_with_ROI__c</fullName>
        <description>Created for CR-20151117-9389.</description>
        <inlineHelpText>Choose the service for which this value opportunity is identified.</inlineHelpText>
        <label>Services with ROI</label>
        <picklist>
            <picklistValues>
                <fullName>All / Mixed Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED / UCC Check-ins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED Discharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other OP Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider - All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider - PCPs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider - Specialists</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summit_Presentation__c</fullName>
        <label>Summit Presentation</label>
        <picklist>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Opportunity_Detailed_Description__c</fullName>
        <label>Value Opportunity Detailed Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Value_Opportunity_ROI_Type__c</fullName>
        <inlineHelpText>(MHI Required, Status must equal 5 or 6) Select the value that most accurately represents the current status of ROI associated with this value opportunity</inlineHelpText>
        <label>ROI Opportunity Status</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Opportunity Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Opportunity Identified and Member Validated Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Opportunity Identified and Member Pursuing Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Opportunity Identified and ROI achieved Pending Member Sign Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Opportunity Identified and ROI achieved - Member Signed Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Opportunity Identified but not Pursued by Member</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Opportunity_Sharing_Permission__c</fullName>
        <inlineHelpText>Select the level of permission to share this opportunity and results that this member has approved</inlineHelpText>
        <label>Value Opportunity Sharing Permission</label>
        <picklist>
            <picklistValues>
                <fullName>Do Not Share</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Share Blinded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Share Within Cohort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Share in Cohort and Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Share Without Limitation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Opportunity_Sign_Off_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Updated by CR4343</description>
        <inlineHelpText>(MHI Required Field) Select the member contact who signed off on this value opportunity&apos;s impact on his or her organization</inlineHelpText>
        <label>Opportunity Sign Off Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities and ROI (Value Opportunity Sign Off Contact)</relationshipLabel>
        <relationshipName>EHBI_Value_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value_Opportunity_Sub_Type__c</fullName>
        <label>Value Opportunity Sub-Type</label>
        <picklist>
            <picklistValues>
                <fullName>Step Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imaging Utilization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class or Drug Removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imaging Copay/Coinsurance Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy Copay/Coinsurance Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED Frequest Flyer Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED Copay/Coinsurance Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>340b Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-PBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Limit/Cost-sharing change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rx 4th/Specialty Tier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disease Management Program Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wellness Program Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Steerage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic Utilization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider Prescribing Patterns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Imaging Utilization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEDIS Quality and Utilization Metrics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Episodic Variance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avoidable Admissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Readmissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chronic Conditions Focus Areas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Priority Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCP Attribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Opportunity_Type__c</fullName>
        <inlineHelpText>Select the type of opportunity this relates to. If more than one applies, pick the type with the highest ROI.</inlineHelpText>
        <label>Overall OA Category</label>
        <picklist>
            <picklistValues>
                <fullName>Referring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed Leakage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outmigration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Line Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility Expansion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access to Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Time Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADT Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment Duration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APP Utilization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automated (no focus)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Block Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Line Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Acceleration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Capture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Lag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity Eligibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Utilization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Risk Avoidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidation of Vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Compliance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_of_Opportunity_Identified__c</fullName>
        <inlineHelpText>(MHI Required, Value greater than $2) Enter the dollar impact of this value opportunity. Impact should be annualized for a period of one year.</inlineHelpText>
        <label>Value of Opportunity Identified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Video__c</fullName>
        <label>Video</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Webconference__c</fullName>
        <label>Webconference</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>White_Paper__c</fullName>
        <label>White Paper</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Opportunity and ROI</label>
    <listViews>
        <fullName>Audience_Rx_ROI</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6</booleanFilter>
        <columns>Dedicated_Advisor__c</columns>
        <columns>NAME</columns>
        <columns>ROI_Category__c</columns>
        <columns>ROI_Dollar_Amount__c</columns>
        <columns>Member_Approved_Results__c</columns>
        <columns>ROI_Start_Date__c</columns>
        <columns>ROI_End_Date__c</columns>
        <columns>Value_Opportunity_Sign_Off_Contact__c</columns>
        <columns>ROI_Member_Sign_Off_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Dedicated_Advisor__c</field>
            <operation>equals</operation>
            <value>Allison Brill</value>
        </filters>
        <filters>
            <field>Dedicated_Advisor__c</field>
            <operation>equals</operation>
            <value>Brittany Aller</value>
        </filters>
        <filters>
            <field>Dedicated_Advisor__c</field>
            <operation>equals</operation>
            <value>Jessica Carlson</value>
        </filters>
        <filters>
            <field>Dedicated_Advisor__c</field>
            <operation>equals</operation>
            <value>Julia Kilberg</value>
        </filters>
        <filters>
            <field>Dedicated_Advisor__c</field>
            <operation>equals</operation>
            <value>Hannah Leigh</value>
        </filters>
        <filters>
            <field>Dedicated_Advisor__c</field>
            <operation>equals</operation>
            <value>Lianne Palmatier</value>
        </filters>
        <label>Audience Rx ROI</label>
    </listViews>
    <listViews>
        <fullName>CCC_ROI_Campaign_Date_Dollars_Contact</fullName>
        <booleanFilter>1 AND 4 AND (2 OR 3 OR 5 OR 6) AND 7</booleanFilter>
        <columns>Dedicated_Advisor__c</columns>
        <columns>Project__c</columns>
        <columns>NAME</columns>
        <columns>ROI_Dollar_Amount__c</columns>
        <columns>ROI_Member_Sign_Off_Date__c</columns>
        <columns>Value_Opportunity_Sign_Off_Contact__c</columns>
        <columns>Case_Study_Attached__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2014 12:00 AM</value>
        </filters>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>BIPC</value>
        </filters>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>CCC</value>
        </filters>
        <filters>
            <field>ROI_Dollar_Amount__c</field>
            <operation>greaterThan</operation>
            <value>USD 0</value>
        </filters>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>BIPAI</value>
        </filters>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>BIPAE</value>
        </filters>
        <filters>
            <field>ROI_Member_Sign_Off_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2014</value>
        </filters>
        <label>CCC ROI Campaign:Date! Dollars! Contact!</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CCC_ROI_Campaign_Date_Dollars_EG</fullName>
        <booleanFilter>1 AND 4 AND (2 OR 3 OR 5 OR 6) AND 7</booleanFilter>
        <columns>Dedicated_Advisor__c</columns>
        <columns>Project__c</columns>
        <columns>NAME</columns>
        <columns>ROI_Dollar_Amount__c</columns>
        <columns>ROI_Member_Sign_Off_Date__c</columns>
        <columns>Value_Opportunity_Sign_Off_Contact__c</columns>
        <columns>Case_Study_Attached__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2014 12:00 AM</value>
        </filters>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>BIPC</value>
        </filters>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>CCC</value>
        </filters>
        <filters>
            <field>ROI_Dollar_Amount__c</field>
            <operation>greaterThan</operation>
            <value>USD 0</value>
        </filters>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>BIPAI</value>
        </filters>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>BIPAE</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Emily Garvin</value>
        </filters>
        <label>CCC ROI Campaign:Date! Dollars! EG</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CCC_Realized_ROI</fullName>
        <columns>Project__c</columns>
        <columns>NAME</columns>
        <columns>Member_Validated_Opportunity__c</columns>
        <columns>Value_of_Opportunity_Identified__c</columns>
        <columns>ROI_Dollar_Amount__c</columns>
        <columns>Value_Opportunity_ROI_Type__c</columns>
        <columns>Value_Opportunity_Sharing_Permission__c</columns>
        <columns>Value_Opportunity_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_MONTHS:9</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity_and_ROI__c.CCC</value>
        </filters>
        <filters>
            <field>Value_Opportunity_ROI_Type__c</field>
            <operation>equals</operation>
            <value>5 - Opportunity Identified and ROI achieved - Member Signed Off</value>
        </filters>
        <label>CCC Realized ROI</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CCC_Realized_ROI2</fullName>
        <columns>Project__c</columns>
        <columns>NAME</columns>
        <columns>Member_Validated_Opportunity__c</columns>
        <columns>Value_of_Opportunity_Identified__c</columns>
        <columns>ROI_Dollar_Amount__c</columns>
        <columns>Value_Opportunity_ROI_Type__c</columns>
        <columns>Value_Opportunity_Sharing_Permission__c</columns>
        <columns>Value_Opportunity_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_MONTHS:9</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity_and_ROI__c.CCC</value>
        </filters>
        <filters>
            <field>Value_Opportunity_ROI_Type__c</field>
            <operation>equals</operation>
            <value>5 - Opportunity Identified and ROI achieved - Member Signed Off</value>
        </filters>
        <label>CCC Realized ROI_M</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CMA_Opp_ROI</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <columns>Value_Opportunity_ROI_Type__c</columns>
        <columns>Member_Validated_Opportunity__c</columns>
        <columns>Case_Study_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity_and_ROI__c.CMA</value>
        </filters>
        <label>CMA Opp &amp; ROI</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPM_Opp_ROI</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <columns>Value_Opportunity_ROI_Type__c</columns>
        <columns>Member_Validated_Opportunity__c</columns>
        <columns>Case_Study_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity_and_ROI__c.Crimson_Practice_Management</value>
        </filters>
        <label>CPM Opp &amp; ROI</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPRM_Realized_ROI</fullName>
        <columns>Project__c</columns>
        <columns>NAME</columns>
        <columns>Value_Opportunity_Detailed_Description__c</columns>
        <columns>Member_Validated_Opportunity__c</columns>
        <columns>Value_of_Opportunity_Identified__c</columns>
        <columns>ROI_Dollar_Amount__c</columns>
        <columns>Value_Opportunity_ROI_Type__c</columns>
        <columns>Value_Opportunity_Sharing_Permission__c</columns>
        <columns>Value_Opportunity_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_MONTHS:9</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity_and_ROI__c.CPRM</value>
        </filters>
        <filters>
            <field>Value_Opportunity_ROI_Type__c</field>
            <operation>equals</operation>
            <value>5 - Opportunity Identified and ROI achieved - Member Signed Off</value>
        </filters>
        <label>CPRM Realized ROI</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EHC_ROI_View</fullName>
        <columns>Project__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <columns>NAME</columns>
        <columns>Value_Opportunity_Sign_Off_Contact__c</columns>
        <columns>Value_Opportunity_Detailed_Description__c</columns>
        <columns>ROI_Dollar_Amount__c</columns>
        <columns>ROI_Member_Sign_Off_Date__c</columns>
        <columns>Value_Opportunity_ROI_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity_and_ROI__c.CCC</value>
        </filters>
        <label>CCC - ROI View</label>
    </listViews>
    <listViews>
        <fullName>EHC_ROI_View1</fullName>
        <columns>Project__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <columns>NAME</columns>
        <columns>Value_Opportunity_Sign_Off_Contact__c</columns>
        <columns>Value_Opportunity_Detailed_Description__c</columns>
        <columns>ROI_Dollar_Amount__c</columns>
        <columns>ROI_Member_Sign_Off_Date__c</columns>
        <columns>Value_Opportunity_ROI_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>012C0000000UMM7</value>
        </filters>
        <label>ICD - ROI View</label>
    </listViews>
    <listViews>
        <fullName>EHC_ROI_View_Bader</fullName>
        <columns>Project__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <columns>NAME</columns>
        <columns>Value_Opportunity_Sign_Off_Contact__c</columns>
        <columns>Value_Opportunity_Detailed_Description__c</columns>
        <columns>ROI_Dollar_Amount__c</columns>
        <columns>ROI_Member_Sign_Off_Date__c</columns>
        <columns>Value_Opportunity_ROI_Type__c</columns>
        <columns>Case_Study_Attached__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity_and_ROI__c.EHC</value>
        </filters>
        <filters>
            <field>Dedicated_Advisor__c</field>
            <operation>equals</operation>
            <value>Abbas Bader</value>
        </filters>
        <label>EHC - ROI View_Bader</label>
    </listViews>
    <listViews>
        <fullName>EHC_ROI_View_Gaul</fullName>
        <columns>Project__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <columns>NAME</columns>
        <columns>Value_Opportunity_Sign_Off_Contact__c</columns>
        <columns>Value_Opportunity_Detailed_Description__c</columns>
        <columns>ROI_Dollar_Amount__c</columns>
        <columns>ROI_Member_Sign_Off_Date__c</columns>
        <columns>Value_Opportunity_ROI_Type__c</columns>
        <columns>Case_Study_Attached__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity_and_ROI__c.EHC</value>
        </filters>
        <filters>
            <field>Dedicated_Advisor__c</field>
            <operation>equals</operation>
            <value>Joe Gaul</value>
        </filters>
        <label>EHC - ROI View - Gaul</label>
    </listViews>
    <listViews>
        <fullName>My_CMA_Opp_ROI</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <columns>Value_Opportunity_ROI_Type__c</columns>
        <columns>Member_Validated_Opportunity__c</columns>
        <columns>Case_Study_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity_and_ROI__c.CMA</value>
        </filters>
        <label>My CMA Opp &amp; ROI</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NUBI_EDBI_ROI_View</fullName>
        <columns>Project__c</columns>
        <columns>Dedicated_Advisor__c</columns>
        <columns>NAME</columns>
        <columns>Value_Opportunity_Sign_Off_Contact__c</columns>
        <columns>Value_Opportunity_Detailed_Description__c</columns>
        <columns>ROI_Dollar_Amount__c</columns>
        <columns>ROI_Member_Sign_Off_Date__c</columns>
        <columns>Value_Opportunity_ROI_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>012C0000000UMM8</value>
        </filters>
        <label>NUBI/EDBI - ROI View</label>
    </listViews>
    <listViews>
        <fullName>Opportunities_View</fullName>
        <columns>Project__c</columns>
        <columns>NAME</columns>
        <columns>Member_Validated_Opportunity__c</columns>
        <columns>Value_of_Opportunity_Identified__c</columns>
        <columns>Value_Opportunity_ROI_Type__c</columns>
        <columns>Value_Opportunity_Sharing_Permission__c</columns>
        <columns>Value_Opportunity_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity_and_ROI__c.CCC</value>
        </filters>
        <label>Opportunities View</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Opportunity and ROI Brief Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity and ROI</pluralLabel>
    <recordTypes>
        <fullName>CCC</fullName>
        <active>true</active>
        <description>Crimson Clinical Advantage</description>
        <label>CCC/CCR</label>
    </recordTypes>
    <recordTypes>
        <fullName>CCM</fullName>
        <active>true</active>
        <description>Crimson Care Management</description>
        <label>CCM</label>
    </recordTypes>
    <recordTypes>
        <fullName>CMA</fullName>
        <active>true</active>
        <label>CMA</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPRM</fullName>
        <active>true</active>
        <label>CPRM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Consulting</fullName>
        <active>true</active>
        <label>Consulting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Crimson_Practice_Management</fullName>
        <active>true</active>
        <label>Crimson Practice Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>EHC</fullName>
        <active>true</active>
        <description>Employee Health</description>
        <label>EHC</label>
    </recordTypes>
    <recordTypes>
        <fullName>HP_Consumer_Scheduling</fullName>
        <active>true</active>
        <description>HP Consumer Scheduling</description>
        <label>HP Consumer Scheduling</label>
    </recordTypes>
    <recordTypes>
        <fullName>QUBI</fullName>
        <active>true</active>
        <description>Quality Compass</description>
        <label>Cost Ops</label>
    </recordTypes>
</CustomObject>